# ADS_2023_CA2_M_G

./: .gitignore  CMakeLists.txt  ReadMe.md
app/: CMakeLists.txt  app.cpp
files/: vs_sample.xml  vs_sample_simple.xml
src/: CMakeLists.txt  ConstructTree.cpp  ConstructTree.hpp  Dir.cpp  Dir.hpp  File.cpp  File.hpp  FileReader.cpp  FileReader.hpp  Functions.cpp  Functions.hpp  Menu.cpp  Menu.hpp  Node.cpp  Node.hpp  XMLValidator.cpp  XMLValidator.hpp
test/: CMakeLists.txt  ConstructTreeTests.cpp  FileReaderTests.cpp  FunctionsTests.cpp  TreeTests.cpp  XMLValidationTests.cpp
